--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.45",
     "vue-material-design-icons": "^5.1.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
